--- a/consent.yaml
+++ b/consent.yaml
@@ -488,6 +488,14 @@ paths:
       summary: Get Use-cases
       description: Get all use-cases that have been configured. A use case is your reason for requesting consent from a consumer e.g. a home loan assessment, a budgeting app.
       operationId: findAllUseCases
+      parameters:
+        - name: combineScopes
+          in: query
+          description: Combine scopes that can be combined according to the CDR Consumer Experience Standards
+          required: false
+          example: true
+          schema:
+            type: boolean
       responses:
         200:
           description: successful response
