add customDataSchema to Use Case

--- a/consent.yaml
+++ b/consent.yaml
@@ -601,6 +601,10 @@ components:
             $ref: '#/components/schemas/Industry'
         accessFrequency:
           $ref: '#/components/schemas/AccessFrequency'
+        customDataSchema:
+          type: string
+          description: Stringified JSON Schema for customData
+          example: {\"$schema\":\"https://json-schema.org/draft/2019-09/schema\",\"type\":\"object\",\"title\":\"custom data Schema\",\"description\":\"JSON schema of customer data\",\"purpose\":\"explain why custom data is needed\",\"properties\":{\"employerName\":{\"type\":\"string\",\"displayText\":\"Employer name\",\"uiComponent\":{\"inputType\":\"text\"},\"rules\":{\"required\":\"Employer name is required\"}}}}
     DataHolder:
       required:
         - brandName
@@ -1038,6 +1042,10 @@ components:
           description: list of OSPs used to provide this use case.
           items:
             $ref: '#/components/schemas/OutsourcedServiceProvider'
+        customDataSchema:
+          type: string
+          description: Stringified JSON Schema for customData
+          example: {\"$schema\":\"https://json-schema.org/draft/2019-09/schema\",\"type\":\"object\",\"title\":\"custom data Schema\",\"description\":\"JSON schema of customer data\",\"purpose\":\"explain why custom data is needed\",\"properties\":{\"employerName\":{\"type\":\"string\",\"displayText\":\"Employer name\",\"uiComponent\":{\"inputType\":\"text\"},\"rules\":{\"required\":\"Employer name is required\"}}}}
     ResponseErrorList:
       type: object
       required:
