--- a/data.yaml
+++ b/data.yaml
@@ -234,6 +234,8 @@ paths:
           $ref: '#/components/responses/429RateLimited'
   /data/common/customers:
     get:
+      security:
+        - bearerAuth: [ 'data:common:customers:read' ]
       tags:
         - Common
       summary: Get Customers
