--- a/consent.yaml
+++ b/consent.yaml
@@ -1038,6 +1038,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/UseCaseDataHolder'
+        features:
+          type: array
+          description: list of features enabled for use-case
+          items:
+            type: string
+            example: DE_IDENTIFICATION
         industries:
           type: array
           description: list of industries this use-case applies to.
