ADA-3980: update maximum pageSize on data api

--- a/banking.yaml
+++ b/banking.yaml
@@ -3273,6 +3273,7 @@ components:
         type: integer
         default: 25
         minimum: 1
+        maximum: 1000
         example: 25
         x-cds-type: PositiveInteger
     ParamAccountOpenStatus:
